--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
             <div class="column">
                 <div class="col-12">
                 <h2>Search for a City</h2>
-                <input type="search" class="form-control" id="searchinfo"/>
+                <input type="search" class="form-control" id="whatcity"/>
+                <button type="button" id="srchbtn" class="btn btn-success">Click me</button>
 
 
 
